--- a/config.yaml
+++ b/config.yaml
@@ -71,37 +71,37 @@ model_list:
   # Custom Models
   - model_name: copilot-3.5-sonnet
     litellm_params:
-      model: openai/copilot-3.5-sonnet
+      model: openai/claude-3.5-sonnet
       api_base: os.environ/CUSTOM_OPENAI_API_BASE
       api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
   - model_name: copilot-3.7-sonnet
     litellm_params:
-      model: openai/copilot-3.7-sonnet
+      model: openai/claude-3.7-sonnet
       api_base: os.environ/CUSTOM_OPENAI_API_BASE
       api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
   - model_name: copilot-3.7-sonnet-thought
     litellm_params:
-      model: openai/copilot-3.7-sonnet-thought
+      model: openai/claude-3.7-sonnet-thought
       api_base: os.environ/CUSTOM_OPENAI_API_BASE
       api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
   - model_name: copilot-2.0-flash-001
     litellm_params:
-      model: openai/copilot-2.0-flash-001
+      model: openai/gemini-2.0-flash-001
       api_base: os.environ/CUSTOM_OPENAI_API_BASE
       api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
   - model_name: copilot-2.5-pro
     litellm_params:
-      model: openai/copilot-2.5-pro
+      model: openai/gemini-2.5-pro
       api_base: os.environ/CUSTOM_OPENAI_API_BASE
       api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
   - model_name: copilot-2.5-pro-preview-05-06
     litellm_params:
-      model: openai/copilot-2.5-pro-preview-05-06
+      model: openai/gemini-2.5-pro-preview-05-06
       api_base: os.environ/CUSTOM_OPENAI_API_BASE
       api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
