--- a/config.yaml
+++ b/config.yaml
@@ -71,32 +71,32 @@ model_list:
   # Claude Models
   - model_name: claude-3.5-sonnet
     litellm_params:
-      model: claude-3.5-sonnet
+      model: openai/claude-3.5-sonnet
       api_base: os.environ/CUSTOM_OPENAI_API_BASE
       api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
   - model_name: claude-3.7-sonnet
     litellm_params:
-      model: claude-3.7-sonnet
+      model: openai/claude-3.7-sonnet
       api_base: os.environ/CUSTOM_OPENAI_API_BASE
       api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
   # Gemini Models
   - model_name: gemini-2.0-flash-001
     litellm_params:
-      model: gemini-2.0-flash-001
+      model: openai/gemini-2.0-flash-001
       api_base: os.environ/CUSTOM_OPENAI_API_BASE
       api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
   - model_name: gemini-2.5-pro
     litellm_params:
-      model: gemini-2.5-pro
+      model: openai/gemini-2.5-pro
       api_base: os.environ/CUSTOM_OPENAI_API_BASE
       api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
   - model_name: gemini-2.5-pro-exp-05-06
     litellm_params:
-      model: gemini-2.5-pro-exp-05-06
+      model: openai/gemini-2.5-pro-exp-05-06
       api_base: os.environ/CUSTOM_OPENAI_API_BASE
       api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
