--- a/config.yaml
+++ b/config.yaml
@@ -81,6 +81,12 @@ model_list:
       api_base: os.environ/CUSTOM_OPENAI_API_BASE
       api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
+  - model_name: claude-3.7-sonnet-thinking
+    litellm_params:
+      model: openai/claude-3.7-sonnet-thought
+      api_base: os.environ/CUSTOM_OPENAI_API_BASE
+      api_key: os.environ/CUSTOM_OPENAI_API_KEY
+
   # Gemini Models
   - model_name: gemini-2.0-flash-001
     litellm_params:
@@ -94,6 +100,12 @@ model_list:
       api_base: os.environ/CUSTOM_OPENAI_API_BASE
       api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
+  - model_name: gemini-2.5-pro-preview-05-06
+    litellm_params:
+      model: openai/gemini-2.5-pro
+      api_base: os.environ/CUSTOM_OPENAI_API_BASE
+      api_key: os.environ/CUSTOM_OPENAI_API_KEY
+
   - model_name: gemini-2.5-pro-exp-05-06
     litellm_params:
       model: openai/gemini-2.5-pro-exp-05-06
@@ -101,41 +113,41 @@ model_list:
       api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
   # Custom Models
-  - model_name: copilot-3.5-sonnet
-    litellm_params:
-      model: openai/claude-3.5-sonnet
-      api_base: os.environ/CUSTOM_OPENAI_API_BASE
-      api_key: os.environ/CUSTOM_OPENAI_API_KEY
+  # - model_name: copilot-3.5-sonnet
+  #   litellm_params:
+  #     model: openai/claude-3.5-sonnet
+  #     api_base: os.environ/CUSTOM_OPENAI_API_BASE
+  #     api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
-  - model_name: copilot-3.7-sonnet
-    litellm_params:
-      model: openai/claude-3.7-sonnet
-      api_base: os.environ/CUSTOM_OPENAI_API_BASE
-      api_key: os.environ/CUSTOM_OPENAI_API_KEY
+  # - model_name: copilot-3.7-sonnet
+  #   litellm_params:
+  #     model: openai/claude-3.7-sonnet
+  #     api_base: os.environ/CUSTOM_OPENAI_API_BASE
+  #     api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
-  - model_name: copilot-3.7-sonnet-thought
-    litellm_params:
-      model: openai/claude-3.7-sonnet-thought
-      api_base: os.environ/CUSTOM_OPENAI_API_BASE
-      api_key: os.environ/CUSTOM_OPENAI_API_KEY
+  # - model_name: copilot-3.7-sonnet-thought
+  #   litellm_params:
+  #     model: openai/claude-3.7-sonnet-thought
+  #     api_base: os.environ/CUSTOM_OPENAI_API_BASE
+  #     api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
-  - model_name: copilot-2.0-flash-001
-    litellm_params:
-      model: openai/gemini-2.0-flash-001
-      api_base: os.environ/CUSTOM_OPENAI_API_BASE
-      api_key: os.environ/CUSTOM_OPENAI_API_KEY
+  # - model_name: copilot-2.0-flash-001
+  #   litellm_params:
+  #     model: openai/gemini-2.0-flash-001
+  #     api_base: os.environ/CUSTOM_OPENAI_API_BASE
+  #     api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
-  - model_name: copilot-2.5-pro
-    litellm_params:
-      model: openai/gemini-2.5-pro
-      api_base: os.environ/CUSTOM_OPENAI_API_BASE
-      api_key: os.environ/CUSTOM_OPENAI_API_KEY
+  # - model_name: copilot-2.5-pro
+  #   litellm_params:
+  #     model: openai/gemini-2.5-pro
+  #     api_base: os.environ/CUSTOM_OPENAI_API_BASE
+  #     api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
-  - model_name: copilot-2.5-pro-preview-05-06
-    litellm_params:
-      model: openai/gemini-2.5-pro-preview-05-06
-      api_base: os.environ/CUSTOM_OPENAI_API_BASE
-      api_key: os.environ/CUSTOM_OPENAI_API_KEY
+  # - model_name: copilot-2.5-pro-preview-05-06
+  #   litellm_params:
+  #     model: openai/gemini-2.5-pro-preview-05-06
+  #     api_base: os.environ/CUSTOM_OPENAI_API_BASE
+  #     api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
 general_settings:
   master_key: os.environ/LITELLM_MASTER_KEY
