--- a/config.yaml
+++ b/config.yaml
@@ -87,6 +87,12 @@ model_list:
       api_base: os.environ/CUSTOM_OPENAI_API_BASE
       api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
+  - model_name: claude-3-7-sonnet-20250219-thinking
+    litellm_params:
+      model: openai/claude-3.7-sonnet-thought
+      api_base: os.environ/CUSTOM_OPENAI_API_BASE
+      api_key: os.environ/CUSTOM_OPENAI_API_KEY
+
   # Gemini Models
   - model_name: gemini-2.0-flash-001
     litellm_params:
