--- a/config.yaml
+++ b/config.yaml
@@ -93,6 +93,12 @@ model_list:
       api_base: os.environ/CUSTOM_OPENAI_API_BASE
       api_key: os.environ/CUSTOM_OPENAI_API_KEY
 
+  - model_name: claude-sonnet-4
+    litellm_params:
+      model: openai/claude-sonnet-4
+      api_base: os.environ/CUSTOM_OPENAI_API_BASE
+      api_key: os.environ/CUSTOM_OPENAI_API_KEY
+
   # Gemini Models
   - model_name: gemini-2.0-flash-001
     litellm_params:
