--- a/config.yaml
+++ b/config.yaml
@@ -35,6 +35,7 @@ model_list:
       model: gpt-4.1
       api_base: os.environ/CUSTOM_OPENAI_API_BASE
       api_key: os.environ/CUSTOM_OPENAI_API_KEY
+      extra_headers: { "Copilot-Vision-Request": "true" }
 
   # O-Series Models
   - model_name: o1
@@ -98,6 +99,7 @@ model_list:
       model: openai/claude-sonnet-4
       api_base: os.environ/CUSTOM_OPENAI_API_BASE
       api_key: os.environ/CUSTOM_OPENAI_API_KEY
+      extra_headers: { "Copilot-Vision-Request": "true" }
 
   # Gemini Models
   - model_name: gemini-2.0-flash-001
